# dr-gather-scatter-trace

./: .gitignore  AUTHORS  AUTHORS.md  COPYING  LICENSE  README.md  dynamorio_cmake.patch
client/: CMakeLists.txt  avx512ctx-shared.h  client.c  client.cpp  client_tools.h  detach_state_shared.h  gen_spatter_in.py  newclient.c  scriptbuild
docs/: application-testing.md  building-gs-trace-tools.md  gs-validation.md
histogram/: generate_histogram.py
scripts/: dr_gs_install.sh
tools/: pattern_frequency.gawk  start_sst_container.sh
